--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section style=background-color:whitee>
        <center>
         
-        <img src="C:\Users\darin\Desktop\CLG\web essential\assignment1\team.jpg" width="450" height="350;">
+        <img src="team.jpg" width="450" height="350;">
             </center>
             <br>
             <h2>About</h2>
