--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
 <body style="background-color:white; color:black;">
 	<section>
 	<center style ="font-size:130%;">
-	  <img src="C:\Users\darin\Desktop\CLG\web essential\assignment1\history.jpg" alt=squad width="500" height="400;">
+	  <img src="history.jpg" alt=squad width="500" height="400;">
 	 <br>
 	<form action="jordan.html">
 
