--- a/jordan.html
+++ b/jordan.html
@@ -6,7 +6,7 @@
 <body style="background-color:white; color:black;">
 <center style ="font-size:140%;" >
 	 
-	<img src="C:\Users\darin\Desktop\CLG\web essential\assignment1\jordan.jpg" alt=squad width="400" height="300;">
+	<img src="jordan.jpg" alt=squad width="400" height="300;">
 	<h3>MICHAEL JORDAN</h3><p><br>
 Michael Jeffrey Jordan (born February 17, 1963), also known by his initials MJ,[9] is an American businessman and former professional basketball player. He played fifteen seasons in the National Basketball Association (NBA) between 1984 and 2003, winning six NBA championships with the Chicago Bulls. He was integral in popularizing basketball and the NBA around the world in the 1980s and 1990s,[10] becoming a global cultural icon.[11] His profile on the NBA website states that he "By acclamation, Michael Jordan is the greatest basketball player of all time."[12] The NBA Most Valuable Player Award trophy is named the Michael Jordan Trophy.
 
